# TimeAnalysis

./: .gitignore  .gitmodules  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  requirements.txt  tradesv3.dryrun.sqlite
.github/workflows/: docs.yml  publish.yml  research-pages.yml  ruff.yml
_freeze/algorithms/fourier/execute-results/: html.json
_freeze/algorithms/moving_average/execute-results/: html.json
_freeze/research/signal_analysis/fourier_transform/execute-results/: html.json
_site/: index.html  listings.json  search.json
_site/algorithms/: fourier.html  index.html  moving_average.html
_site/appendix/: references.html
_site/quickstart/: index.html  setup.html
_site/research/: index.html
_site/research/signal_analysis/: fourier_transform.html
_site/site_libs/bootstrap/: bootstrap-46e08ecdae118c9b1ec0fb2838ca8d3e.min.css
algorithms/: fourier.qmd  index.qmd  moving_average.qmd
algorithms/.jupyter_cache/: global.db
algorithms/.jupyter_cache/executed/add1c2121cbf9f2802c9c0124c7703d7/: base.ipynb
algorithms/.jupyter_cache/executed/c1c2b15fbb3d111ed9a17b89c17eadbc/: base.ipynb
appendix/: references.qmd
docs/markdown_info/bicycle/: Алгоритмическая торговля.md  Архитектура торговца.md  Биржа. Терминология.md  Жизненный цикл ордеров.md  Торговые графики.md
docs/markdown_info/freqtrade/: FreqTrade API.md  FreqTrade Архитектурный анализ, уровни, компоненты, связи, PlantUML-диаграммы.md  FreqTrade.md  Freqtrade FreqAI.md  Freqtrade REST API Подробная инструкция по подключению своего UI.md  Freqtrade. Инструкция по установке, настройке и режимам работы.md
docs/uml/: uml_ui.drawio
docs/uml/bicycle/: Domain.drawio  application.drawio  core.drawio  infrastructure.drawio  sequence_backtest.drawio  sequence_main.drawio
docs/uml/freqtrade/: levels_freqtrade.drawio
infrastructure/vizualization_pipline/: __init__.py  configurable_visual_strategy.py  custom_indicators.py  example.py  visualization_pipeline.py
literature/: main.md  plotly_dash_tutorial.ipynb
quickstart/: index.qmd  setup.qmd
research/: README.md  _quarto.yml  about.qmd  educational.qmd  exploratory-data-analysis.qmd  fourie_analysis.ipynb  index.qmd  model-strategies.qmd  project-infrastructure.qmd  styles.css
research/posts/: component-analysis.ipynb  example-research.ipynb  freqtrade-backtester-smoke-test.ipynb  lagutin-statistical-experiments.ipynb  model-backtesting-pipeline.ipynb  model-zoo-backtest-comparison.ipynb  parametric-estimates.ipynb  patchtst-cuda-forecasting.ipynb  sklearn-bybit-tutorial.ipynb
research/posts/educational/related-topics/: component-analysis.ipynb  freqtrade-backtester-smoke-test.ipynb  lagutin-statistical-experiments.ipynb  model-backtesting-pipeline.ipynb  model-zoo-backtest-comparison.ipynb  parametric-estimates.ipynb  patchtst-cuda-forecasting.ipynb
research/posts/educational/related-topics/neural_ntworks/: math_bihind_nn.ipynb
research/posts/educational/tutorials/: sklearn-bybit-tutorial.ipynb
research/posts/model-strategies/: model-zoo-backtest-comparison.ipynb  rsi-only-strategy.qmd
research/posts/model-strategies/assets/: rsi-5m-monthly-breakdown.csv  rsi-5m-pair-breakdown.csv  rsi-5m-trades.csv  rsi-5m-train-test-summary.csv  rsi-5m-train-test-summary.json
research/research/: patchtst_test_predictions.csv
research/signal_analysis/: fourier_transform.py  fourier_transform.qmd
research/signal_analysis/.jupyter_cache/: global.db
research/signal_analysis/.jupyter_cache/executed/70a1886a0fb5ea143a49d95ceb8c9bf6/: base.ipynb
src/time_analysis/: __init__.py
src/time_analysis/backtesting/: __init__.py  freqtrade_pipeline.py  freqtrade_report.py  signal_backtester.py  visualization.py
src/time_analysis/data_sources/: __init__.py  bybit_public.py
src/time_analysis/models/: __init__.py  base.md  base.py  features.py  financial_math.md  financial_math.py  ml_direction.md  ml_direction.py  model_zoo.md  model_zoo.py  simple_momentum.md  simple_momentum.py
tests/: test_bybit_public.py  test_freqtrade_pipeline.py  test_signal_backtester.py  test_signal_models.py  test_visualization.py
tests/infrastructure/: test_visualization_pipeline.py
trading/freqtrade/: docker-compose.yml
trading/freqtrade/freqtrade/: freqtradebot.py
trading/freqtrade/freqtrade/exchange/: exchange.py
trading/freqtrade/tests/freqtradebot/: test_freqtradebot.py
trading/freqtrade/user_data/: config.example.json
trading/freqtrade/user_data/strategies/: time_analysis_sma_strategy.py
trading/user_data/: config_for_viz.json
user_data/: config.example.json  config_for_viz.json  config_rsi_only_1h.json  config_rsi_only_5m.json  config_rsi_risk_managed_5m.json  pairs_liquid_top10_usdt.json
user_data/strategies/: RsiOnly5mStrategy.json  RsiOnly5mStrategy.py  RsiOnlyRiskManaged5mStrategy.json  RsiOnlyRiskManaged5mStrategy.py  RsiOnlyStrategy.json  RsiOnlyStrategy.py  VisualOnlyStrategy.py
