[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "time-analysis"
version = "0.1.0"
description = "Data analysis of time sequences"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"

dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "catboost>=1.2.7",
    "torch>=2.7",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "pyarrow>=16.0",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "requests>=2.33.1",
    "jupyterlab",
    "freqtrade",
    "ta",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pandas-stubs~=3.0.2",
]

[tool.uv]
cache-dir = ".uv/cache"
default-groups = ["dev"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
freqtrade = { path = "trading/freqtrade", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    ".venv",
    "literature",
    "time_analysis.egg-info",
    "docs",
    "trading/freqtrade",
    "research/posts/**/*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = [".", "trading", "trading/freqtrade"]
addopts = "--basetemp=.pytest_tmp"
